disa ndryshime te vogla

--- a/css/home.css
+++ b/css/home.css
@@ -5,13 +5,11 @@
     font-family: sans-serif;
 }
 
-/* BODY */
 body {
     margin: 0;
     padding: 0;
 }
 
-/* NAVBAR */
 .main-header {
     display: flex;
     justify-content: center;
@@ -51,39 +49,6 @@ nav a:hover {
     background-color: #cf711f;
 }
 
-
-
-
-/* HOME SECTION */
-.home-section {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    background-color: #fdf2e9;
-    gap: 20px;
-}
-
-.home-section .aside {
-    max-width: 40%;
-    text-align: left;
-    margin-right: 5px;
-}
-
-.home-section img {
-    width: 50%;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.home-section h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-    text-align: center;
-
-}
-
-/* HOME SECTION */
 .home-section {
     display: flex;
     align-items: center;
@@ -97,6 +62,11 @@ nav a:hover {
     max-width: 40%;
     text-align: center;
     margin-right: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .home-section img {
@@ -108,6 +78,7 @@ nav a:hover {
 .home-section h1 {
     font-size: 36px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .home-section p {
@@ -126,45 +97,49 @@ nav a:hover {
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    margin-top: 10px;
 }
 
 .home-section button:hover {
     background-color: gray;
 }
 
-/* section featured */
 .section-featured {
-    padding: 4.8rem 0 3.2rem 0;
+    padding: 60px 0 40px 0;
 }
 
 .heading-featured-in {
-    font-size: 1.4rem;
+    font-size: 22px;
     text-transform: uppercase;
-    letter-spacing: 0.75px;
+    letter-spacing: 1px;
     font-weight: 500;
     text-align: center;
-    margin-bottom: 2.4rem;
+    margin-bottom: 30px;
     color: #888;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 auto;
 }
 
 .logos {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .logos img {
-    height: 3.2rem;
+    height: 50px;
     filter: brightness(0);
     opacity: 50%;
 }
 
-/* Footer */
 .footer {
     width: 100%;
     text-align: center;
     padding: 30px 0;
-
 }
 
 .footer h4 {
@@ -177,7 +152,7 @@ nav a:hover {
 .icons {
     padding: 20px 0;
     display: flex;
-    gap: 1rem;
+    gap: 16px;
     justify-content: center;
     align-items: center;
 }
